--- a/styles.css
+++ b/styles.css
@@ -32,23 +32,16 @@ h2 {
     margin-bottom: 10px;
 }
 
-.include-options {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.include-options label {
-    margin-right: 20px;
-}
 
 button {
-    padding: 10px 20px;
+    padding: 12px 24px;
     font-size: 18px;
     background-color: #007BFF;
     color: white;
     border: none;
     cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 button:hover {
@@ -59,20 +52,26 @@ button:active {
     background-color: #003366;
 }
 
-input[type="text"] {
+#generatedPassword {
     width: 50%;
-    padding: 10px;
+    padding: 12px;
     font-size: 18px;
     margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 #Copy, #Edit {
-    margin-left: 10px;
+    padding: 10px;
     cursor: pointer;
     color: #007BFF;
     font-weight: bold;
+    border: 1px solid #007BFF;
+    border-radius: 5px;
+    margin-right: 10px;
 }
 
 #Copy:hover, #Edit:hover {
-    color: #0056b3;
+    background-color: #007BFF;
+    color: white;
 }
